--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="generic.html">Pet Hotel</a></li>
+											<li><a href="elements.html">Pet Spa</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
 										</ul>
@@ -41,30 +41,30 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="image"><img src="" alt="" /></div><div class="content"></div>
+							<div class="image-main"><img src="./images/dreamstime_xxl_87694876.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Hotel</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.<p>
+							<div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="" /></div><div class="content">
+								<h2>Pet Hotel</h2>
+								<p>If your in need of someone to watch your pet while your away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal until you get back.<p>
 								<a href="#" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Spa</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.<p>
+							<div class="image"><img src="./images/DL2.jpg" alt="" /></div><div class="content">
+								<h2>Pet Spa</h2>
+								<p>We also offer pet grooming services, at our Pet Spa. Whether you want your animal to get a trim up, a wash, or a full on spa treatment our Pet Spa is the place for you and your animal. <p>
 								<a href="#" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Products</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.<p>
+							<div class="image"><img src="./images/GettyImages-1215180165.jpg" alt="" /></div><div class="content">
+								<h2>Pet Products</h2>
+								<p>If your in need of a restock on pet food, treats, or are looking for a new toy for your pet to enjoy, check out our Pet Products page. <p>
 								<a href="#" class="button fit primary">Take Me There</a>
 							</div>
 						</section>
@@ -73,7 +73,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; By. Mylan, Marlena, Tyler, & Linkin</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>By. Mylan, Marlena, Tyler, & Linkin</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
@@ -81,7 +81,6 @@
 
 		<!-- Scripts -->
 			<script src="./js/jquery.min.js"></script>
-			<script src="./js/jquery.scrollex.min.js"></script>
 			<script src="./js/jquery.scrolly.min.js"></script>
 			<script src="./js/browser.min.js"></script>
 			<script src="./js/breakpoints.min.js"></script>
