--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Pet Hotel</a></li>
 											<li><a href="elements.html">Pet Spa</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<!-- <li><a href="#">Sign Up</a></li> -->
+											<li><a href="login.html">Log In</a></li>
 										</ul>
 									</div>
 								</li>
