--- a/public/spa.html
+++ b/public/spa.html
@@ -25,11 +25,10 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="home.html">Home</a></li>
+											<li><a href="hotel.html">Pet Hotel</a></li>
+											<li><a href="spa.html">Pet Spa</a></li>
+											<li><a href="login.html">Log In</a></li>
 										</ul>
 									</div>
 								</li>
