--- a/public/home.html
+++ b/public/home.html
@@ -26,6 +26,8 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
+											<!-- <li><a href="/spas">Pet spa</a></li>
+											look at routes for names -->
 											<li><a href="home.html">Home</a></li>
 											<li><a href="hotel.html">Pet Hotel</a></li>
 											<li><a href="spa.html">Pet Spa</a></li>
