--- a/public/hotel.html
+++ b/public/hotel.html
@@ -1,17 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Petopia Pet Spa</title>
+		<title>Petopia Pet Hotel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
-	<body class="landing is-preload">
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
@@ -36,21 +30,13 @@
 						</nav>
 					</header>
 
-				<!-- Banner -->
-					<!-- <section id="banner">
-						<div class="inner">
-							<p>
-								welcome to our pet hotel page!
-							</p>
-						</div>
-					</section> -->
-
 				<!-- Two -->
 				<section id="two" class="wrapper alt style2">
 					<section class="spotlight">
 						<div class="image"><img src="./images/unsplash-image-s9Tf1eBDFqw.jpg" alt="" /></div><div class="content">
 							<h2>Pet Hotel</h2>
-							<p>If your in need of someone to watch your pet while your away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal until you get back.<p>
+							<p>
+							Welcome to our Pet Hotel! Here you can schedule an appointemnt for any of the following services that we provide. If your in need of someone to watch your pet while your away, look no further as our pet hotel is the perfect place. We have many highly trained caretakers that take lots of pride in what they do and will watch, feed, and play with your animal until you get back.<p>
 						</div>
 					</section>
 				</section>
@@ -58,29 +44,23 @@
 					<!-- Three -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
-							<header class="major">
 								<h2>Pet Hotel Services</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
 							<ul class="features">
-									<h3>Service 1</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>1-day $100</h3>
+									<p>We will watch, feed, and play with your pet for 1-day</p>
+									<a href="#" class="button fit primary">Book Now</a>
 								</li>
-									<h3>Service 2</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>3-days $275</h3>
+									<p>We will watch, feed, and play with your pet for 3-days</p>
+									<a href="#" class="button fit primary">Book Now</a>
 								</li>
-									<h3>Service 3</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>5-days $450</h3>
+									<p>We will watch, feed, and play with your pet for 5-days</p>
+									<a href="#" class="button fit primary">Book Now</a>
 								</li>
-									<h3>Service 4</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-									<h3>Service 5</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-									<h3>Service 6</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>1-week $625</h3>
+									<p>We will watch, feed, and play with your pet for 1-week</p>
+									<a href="#" class="button fit primary">Book Now</a>
 								</li>
 							</ul>
 						</div>
